v0.0.9/_sources/plugins/backup_last_status_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.ise.backup_last_status_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.backup_last_status_info -- Information module for Backup Last Status
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 0.0.9).

    To install it use: :code:`ansible-galaxy collection install cisco.ise`.

    To use it in a playbook, specify: :code:`cisco.ise.backup_last_status_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.ise

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Backup Last Status.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk


.. Options


.. Notes


.. Seealso

See Also
--------

.. seealso::

   :ref:`cisco.ise.plugins.module_utils.definitions.backup_last_status <ansible_collections.cisco.ise.plugins.module_utils.definitions.backup_last_status_module>`
      The official documentation on the **cisco.ise.plugins.module_utils.definitions.backup_last_status** module.
   `Backup Last Status reference <https://ciscoisesdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Backup Last Status object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Backup Last Status
      cisco.ise.backup_last_status_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-ise_response"></div>
                    <b>ise_response</b>
                    <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco ISE Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;response&quot;: {
        &quot;repository&quot;: &quot;string&quot;,
        &quot;type&quot;: &quot;string&quot;,
        &quot;name&quot;: &quot;string&quot;,
        &quot;startDate&quot;: &quot;string&quot;,
        &quot;error&quot;: &quot;string&quot;,
        &quot;action&quot;: &quot;string&quot;,
        &quot;scheduled&quot;: &quot;string&quot;,
        &quot;status&quot;: &quot;string&quot;,
        &quot;message&quot;: &quot;string&quot;,
        &quot;justComplete&quot;: &quot;string&quot;,
        &quot;percentComplete&quot;: &quot;string&quot;,
        &quot;details&quot;: &quot;string&quot;,
        &quot;hostName&quot;: &quot;string&quot;,
        &quot;initiatedFrom&quot;: &quot;string&quot;
      },
      &quot;version&quot;: &quot;string&quot;
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

